Fix mobile news scrolling and publication year spacing

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -260,6 +260,15 @@ footer.sticky-bottom {
   }
 }
 
+@media (max-width: 575.98px) {
+  .publications {
+    h2.year {
+      margin-bottom: 0.75rem;
+      text-align: left;
+    }
+  }
+}
+
 // Blog
 .header-bar {
   border-bottom: none;
